@@ -21,7 +21,7 @@
 
     <h1 class="title">Customizing weewx<br />
       <span class='version'>
-      Version: 2.3.0a2
+      Version: 2.3.0a3
       </span>
     </h1>
     <h1>Table of Contents</h1>
