@@ -32,7 +32,7 @@ function showtab(tab,id) {
 
   <h1 class="title">User's Guide to the <span class="code">weewx</span> Weather System<br />
     <span class='version'>
-Version: 2.3.0a2
+Version: 2.3.0a3
     </span>
   </h1>
 
@@ -335,7 +335,8 @@ Version: 2.3.0a2
       </li>
       <li id="wmr100">Oregon Scientific WMR100 series.  Tested on the
         <a href="http://us.oregonscientific.com/cat-Weather-sub-Professional-Weather-Stations-prod-Pro-Wireless-Weather-Station.html">WMR100N</a>, other stations may work as well.</li>
-      <li id="wmr200">Oregon Scientific WMR200 series. This is an experimental version. Please report any problems!
+      <li id="wmr200">Oregon Scientific WMR200 series. This is an experimental version 
+	  &mdash; it may or may not work. Please report any problems!
 	  </li>
       <li id="wmr9x8">Oregon Scientific WMR-918/968 series.  Tested on the
         <a href="http://www.oregonscientificstore.com/oregon_scientific/product.asp?itmky=659831">Oregon Scientific WMR-968</a>, other stations may work as well.
@@ -345,7 +346,8 @@ Version: 2.3.0a2
         Elecsa, Tycon, Maplin, Froggit, and others. Tested on the
         <a href="http://www.ambientweather.com/amws2080.html">Ambient Weather WS2080</a>, other stations may work as well.
       </li>
-      <li id='ws28xx'>La Crosse WS-28xx series.  This is an experimental version.  Please report any problems!
+      <li id='ws28xx'>La Crosse WS-28xx series.  This is an experimental version 
+	  &mdash; it may or may not work.  Please report any problems!
       </li>
     </ol>
 
