@@ -32,7 +32,7 @@ WEEWX_ROOT = /home/weewx
 socket_timeout = 20
 
 # Do not modify this - it is used by setup.py when installing and updating.
-version = 2.3.0a2
+version = 2.3.0a3
 
 ############################################################################################
 
@@ -121,7 +121,7 @@ version = 2.3.0a2
     max_tries = 4
     
 	# The driver to use:
-	driver = weewx.vantage
+	driver = weewx.drivers.vantage
 	
 ############################################################################################
 
@@ -140,7 +140,7 @@ version = 2.3.0a2
     stale_wind = 30
     
     # The driver to use
-    driver = weewx.wmr100
+    driver = weewx.drivers.wmr100
     
 ############################################################################################
 
@@ -159,7 +159,7 @@ version = 2.3.0a2
     stale_wind = 30
     
     # The driver to use
-    driver = weewx.wmr200
+    driver = weewx.drivers.wmr200
     
 ############################################################################################
 
@@ -189,7 +189,7 @@ version = 2.3.0a2
     stale_wind = 30
     
     # The driver to use
-    driver = weewx.wmr9x8
+    driver = weewx.drivers.wmr9x8
     
 ############################################################################################
 
@@ -212,7 +212,7 @@ version = 2.3.0a2
     pressure_offset = 0
 
     # The driver to use
-    driver = weewx.fousb
+    driver = weewx.drivers.fousb
 
 ############################################################################################
 
@@ -232,7 +232,7 @@ version = 2.3.0a2
     # The start time. [Optional. Default is to use the present time]        
 	# start = 2011-01-01 00:00
 	
-	driver = weewx.simulator
+	driver = weewx.drivers.simulator
 	
 ############################################################################################
 
